--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -15,6 +15,11 @@
         width: 170px;
         margin: 45px auto 0 auto;
     }
+    &__searchbar {
+        width: 101px;
+        height: 38px;
+        margin-left: 24px;
+    }
     .inner {
         position: relative;
         background-color: $main-color;
